[package]
name = "prew"
version = "0.1.8"
edition = "2021"
authors = ["dek <dek@substructure.one>"]
description = "Reverse rewrite proxy for PostgreSQL"
readme = "README.md"
repository = "https://github.com/SubstructureOne/prew"
homepage = "https://github.com/SubstructureOne/prew"
license = "Apache-2.0"
categories = ["database", "network-programming"]

[dependencies]
byteorder = "1.4.3"
env_logger = "0.9.1"
futures = "0.3.25"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
#pg_query = { git = "https://github.com/pganalyze/pg_query.rs.git", branch = "pg-15" }
pg_query = "0.8"
toml = "0.5.9"
async-trait = "0.1.60"
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
postgres-types = { version = "0.2.4", features = ["derive"] }


[lib]
name = "prew"
path = "src/lib.rs"

[[bin]]
name = "prew"
path = "src/main.rs"
